--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootcamp",
+  "name": "blockchain-developer-bootcamp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
